# rp2350-r503

./: Cargo.toml  readme.md
html/: WebUSBDevice.js  index.html
src/: app.rs  handlers.rs  main.rs
uartbridge-icd/: Cargo.toml
uartbridge-icd/src/: lib.rs
