[package]
name = "rp2350-r503"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "task-arena-size-98304",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4.0", features = [
    "binary-info",
    "critical-section-impl",
    "defmt",
    "rp235xa",
    "time-driver",
    "unstable-pac",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embedded-io-async = "0.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
postcard-rpc = { version = "0.11.3", features = ["embassy-usb-0_3-server"] }
postcard = { version = "1.1" }
postcard-schema = { version = "0.2.0", features = ["derive"] }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
static_cell = "2.1"
r503 = { git = "https://github.com/Dygear/r503.git" }
uartbridge-icd = { path = "uartbridge-icd" }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
